--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,10 @@ div{
 footer{
     background: linear-gradient(90deg, #000000 0%, #0000ff 25%, #0066ff 70%, #000000 100%);
     border: 5px solid #ffffff;
-    font-size: 20px;
     text-align: right;
+}
+
+footer{
+    font-size: 20px;
     padding: 15px 15px 15px 0px;
 }
