--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ div{
     color: #C4C4C4;
 }
 
-.blue::first-line{
+.blue > h2{
     color: #C4C4C4;
 }
 
@@ -81,7 +81,7 @@ footer{
     text-align: right;
 }
 
-footer{
+footer > p{
     font-size: 20px;
     padding: 15px 15px 15px 0px;
 }
